fixed large screen overflow issues and removed unneeded modules

--- a/src/app/pages/order/order-detail/order-detail.component.scss
+++ b/src/app/pages/order/order-detail/order-detail.component.scss
@@ -51,6 +51,7 @@ mat-sidenav-container {
 }
 
 .card-item-container {
+  margin-top: 10px;
   margin-left: 15px;
   overflow: hidden;
 }
